--- a/project-service.properties
+++ b/project-service.properties
@@ -1,3 +1,5 @@
+server.port=8081
+spring.datasource.url = jdbc:postgresql://localhost:5432/projectservice_db
 spring.datasource.username = postgres
 spring.datasource.password = Suma@12
 
